<resources>
    <string name="app_name">My Checklist</string>
    <string name="add_task">Add Task</string>
    <string name="settings">Settings</string>
    <string name="new_task_title">Add New Task</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="pick_time">Pick Time (Optional)</string>
    <string name="task_hint">What needs to be done?</string>
    <string name="date_label">Date:</string>
    <string name="pick_date_btn">Pick Date</string>
    <string name="time_label">Time:</string>
    <string name="hour_hint">HH</string>
    <string name="minute_hint">mm</string>
    <string name="lang_title">Select Language</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="dark_mode">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="theme_title">Select Theme</string>
    <string name="language">Language</string>
    <string name="reminder_settings">Reminder Time</string>
    <string name="reminder_title">Remind before due</string>
    <string name="due_now_title">It\'s time!</string>
    <string name="reminder_time_left">%d minutes left</string>
    <string name="reminder_days_left">%d day(s) left</string>
    <string name="reminder_custom">Custom...</string>
    <string name="reminder_none">None</string>
    <string name="reminder_mins">%1$d minutes</string>
    <string name="reminder_days">%1$d day(s)</string>
    <string name="reminder_custom_title">Custom Reminder Time</string>
    <string name="reminder_custom_msg">Enter minutes before due to receive notification:</string>
    <string name="reminder_hint">Value</string>
    <string name="unit_minutes">Minutes</string>
    <string name="unit_hours">Hours</string>
    <string name="unit_days">Days</string>
    <string name="app_color">App Color</string>
    <string name="hue">Hue</string>
    <string name="time_format">Time Format</string>
    <string name="notifications">Notifications</string>
    <string name="notif_on">Always show tasks in notification</string>
    <string name="notif_off">Don\'t show tasks in notification</string>
    <string name="time_12h">12-hour clock</string>
    <string name="time_24h">24-hour clock</string>
    <string name="time_hint_24h">HH:mm (e.g. 23:59)</string>
    <string name="time_hint_12h">HH:mm AM/PM (e.g. 11:59 PM)</string>
    <string name="invalid_time">Invalid time format. Please try again.</string>
    <string name="export_data">Export Data (JSON)</string>
    <string name="import_data">Import Data (JSON)</string>
    <string name="export_success">Data exported to Downloads folder</string>
    <string name="import_success">Data imported successfully</string>
    <string name="import_error">Error importing data</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="mark_done_selected">Mark Done Selected</string>
    <string name="task_deleted">Task deleted</string>
    <string name="undo">UNDO</string>
    <string name="selection_mode">Selection Mode</string>
    <string name="items_selected">%d items selected</string>
    <string name="lang_vi">Tiếng Việt</string>
    <string name="lang_en">English</string>
</resources>