<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editTaskContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/task_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date_label" />

    <Button
        android:id="@+id/btnPickDate"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_date_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editHour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/hour_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=":"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editMinute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/minute_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center" />

        <RadioGroup
            android:id="@+id/rgAmPm"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rbAm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/ampm_selector"
                android:button="@null"
                android:gravity="center"
                android:text="AM"
                android:textColor="@color/ampm_text_color"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rbPm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ampm_selector"
                android:button="@null"
                android:gravity="center"
                android:text="PM"
                android:textColor="@color/ampm_text_color"
                android:textSize="12sp" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
